SUBDIRS = src


.PHONY: doxygen
doxygen:

	doxygen EulersFormulaClass.doxygen.config


.PHONY: displaySettings
displaySettings:

	@echo "srcdir               = ${srcdir}"
	@echo "abs_srcdir           = ${abs_srcdir}"
	@echo "top_srcdir           = ${top_srcdir}"
	@echo "builddir             = ${builddir}"
